--- a/ems_Frontend/src/app/components/user/user.component.html
+++ b/ems_Frontend/src/app/components/user/user.component.html
@@ -123,9 +123,9 @@
                         <label for="role" class="form-label">Role</label>
                         <select id="role" class="form-select" formControlName="role">
                             <option selected>Select Role</option>
-                            <option value="Male">Admin</option>
-                            <option value="Female">Employee</option>
-                            <option value="Other">User</option>
+                            <option value="Admin">Admin</option>
+                            <option value="Employee">Employee</option>
+                            <option value="User">User</option>
                         </select>
                         <div class="text-danger">
                             @if(userForm.controls['role'].errors?.['required'] && userForm.controls['role'].touched )
